# Traffic-Optimizer

./: README.md  dqn_traffic_signal_control.py.py  model.py  model_architecture.py  model_training.py  multi_agent_traffic.py  pyproject.toml  sumo_model.py
2025-04-04-13-04-14/: tripinfo.xml
SIMscripts/: run_sim.py
SUMO/: network.net.xml  routes.rou.xml
Sector22/: osm.netccfg  osm.passenger.trips.xml  osm.polycfg  osm.sumocfg  osm_pt.rou.xml  osm_ptlines.xml  osm_stops.add.xml  stopinfos.xml  trips.trips.xml  vehroutes.xml
config/: trf_sim.sumocfg
config/network/: traffic.net.xml
ggn/: build.bat  osm.netccfg  osm.passenger.trips.xml  osm.poly.xml  osm.polycfg  osm.sumocfg  osm.tll.xml  osm_pt.rou.xml  osm_ptlines.xml  osm_stops.add.xml  regex.py  stopinfos.xml  trips.trips.xml  vehroutes.xml
network/: traffic.con.xml  traffic.edg.xml  traffic.net.xml  traffic.nod.xml  traffic.rou.xml
