[project]
name = "traffic-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym>=0.26.2",
    "numpy>=2.2.3",
    "pettingzoo>=1.24.3",
    "stable-baselines3[extra]>=2.5.0",
    "sumolib>=1.22.0",
    "torch>=2.6.0",
    "traci>=1.22.0",
]

[dependency-groups]
dev = []
